Upgrade 22. Add Rights menu and save default hour in expeditions

--- a/virtstadisicts/datacubes/templates/datacubes/navbar.html
+++ b/virtstadisicts/datacubes/templates/datacubes/navbar.html
@@ -29,6 +29,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"></i>Taules Mestres<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                                 <li><a href="{% url 'datacubes.views.carrier_vw' %}">Transportistes</a></li>
+                                <li><a href="{% url 'datacubes.views.agentrights_vw' %}">Permisos</a></li>
                         </ul>
                 </li>
                {% endif %}
