--- a/virtstadisicts/datacubes/templates/datacubes/deliver2.html
+++ b/virtstadisicts/datacubes/templates/datacubes/deliver2.html
@@ -111,7 +111,7 @@
 								{% endfor %} 
 							   </select>
 							</td>
-							<td><input type="hidden" id="iddeliver" name="iddeliver" class="form-control" value="{{ row.iddeliver|rjust:"11" }}" readonly></input></td>
+							<td style="display:none;"><input type="hidden" id="iddeliver" name="iddeliver" class="form-control" value="{{ row.iddeliver|rjust:"11" }}" readonly></input></td>
 						  </tr>
 					{% endfor %}
 			    </tbody>
