--- a/virtstadisicts/datacubes/templates/datacubes/carrier_edit.html
+++ b/virtstadisicts/datacubes/templates/datacubes/carrier_edit.html
@@ -1,26 +1,49 @@
 {% extends 'datacubes/base.html' %}
-
-    {% block title %}Transportistes{% endblock title %}
-
     {% block content %}
-            <h2 class="page-header">Transportistes</h2>
-            <form method="POST" action="{{ action }}" enctype="multipart/form-data">{% csrf_token %}
-                <div class="datagrid table">
-                {{ as_table }}
-                <table border = 1>
-                  <tr>
-                    <th><label class="control-label" for="codcarrier">Codi Transportista</label></th>
-                    <th><label class="control-label" for="carriername">Nom Transportista</label></th>
-                  </tr>
-                  <tr>
-                    <td><input size="3" type="text" id="codcarrier" name="codcarrier" value={{ carriers.codcarrier }}></td>
-                    <td><input size="50" type="text" id="carriername" name="carriername" value={{ carriers.carriername }} ></td>
-                  </tr>
-                </table>
-                </div>
-                <div align = "right">
-                  <button type="submit" name="action" class="btn btn-primary" value="save">Gravar</button>
-                  <a href="{% url 'datacubes.views.carriers_vw' %}" class="btn btn-warning" type="submit">Cancelar</a>
-                </div>
+	<div class="row"> 
+	   <div class="col-md-4 hidde-sm"></div>
+	      <div class="col-md-4">
+            	<label class="control-label"><h3><span class="label label-primary">Transportistes</span></h3></label>
+	      </div>
+	         <div class="col-md-4 hidde-sm"></div>
+        </div>
+
+            <form method="POST" action="{{ action }}" enctype="multipart/form-data">
+            {% csrf_token %}
+	<div class="row"> 
+	   <div class="col-md-4" hidde-sm></div>
+	      <div class="col-md-4"></div>
+	         <div class="col-md-4">
+                    <button type="submit" name="action" class="btn btn-primary" value="save">Gravar</button>
+                    <a href="{% url 'datacubes.views.carrier_vw' %}" class="btn btn-warning" type="submit">Cancelar</a>
+		 </div>
+        </div>
+
+	<div class="row"> 
+	     <br>
+	        {% if type == 1 %}
+                	<input type="hidden" id="pkcarrier" name="pkcarrier" value={{ carriers.pk }}>
+                	<input type="hidden" id="vtype" name="vtype" value="1">
+	        {% elif type == 0 %}
+                	<input type="hidden" id="pkcarrier" name="pkcarrier" value=0>
+                	<input type="hidden" id="vtype" name="vtype" value="0">
+	        {% endif %}
+	   <div class="col-md-2" hidde-sm></div>
+	      <div class="col-md-8">
+	          <label class="control-label"><h4><span class="label label-primary">Codi transportista&nbsp&nbsp&nbsp</span></h4></label>
+	           {% if type == 1 %}
+                       <input size="5" maxlength="5" type="text" id="codcarrier" name="codcarrier" value="{{ carriers.codcarrier }}"></input>
+	           {% elif type == 0 %}
+                       <input size="5" maxlength="5" type="text" id="codcarrier" name="codcarrier" value=""></input>
+		   {% endif %}
+                   <br>
+	          <label class="control-label"><h4><span class="label label-primary">Nom transportista&nbsp&nbsp&nbsp</span></h4></label>
+	           {% if type == 1 %}
+                       <input size="50" maxlength="50" type="text" id="carriername" name="carriername" value="{{ carriers.carriername }}"></input>
+	           {% elif type == 0 %}
+                       <input size="50" maxlength="50" type="text" id="carriername" name="carriername" value=""></input>
+		   {% endif %}
+	      </div>
             </form>
+        </div>
     {% endblock content %}
