--- a/virtstadisicts/datacubes/templates/datacubes/carrier_list.html
+++ b/virtstadisicts/datacubes/templates/datacubes/carrier_list.html
@@ -1,16 +1,35 @@
 {% extends 'datacubes/base.html' %}
 {% block content %}
-     <div class="row">
-         <div class="col-md-12 col-sm-12">
-		<h1 align="left"><p>Manteniment Transportistes</p></h1>
-	 </div>
-	<div class="row">
-	  <div class="col-md-3 hidde-sm"></div>	   
+     <div class="row"> <!-- div i0 -->
+         <div class="col-md-12 col-sm-12"> <!-- div i3 -->
+		<h1 align="center"><p>Manteniment Transportistes</p></h1>
+		<br>
+     </div> <!-- div f0 -->
+     <div class="row"> <!-- div f5 -->
+         <div class="col-md-5 hidde-sm"> </div> <!-- div if4 -->
+          <div class="col-md-4">
+            <form method="post" action="{{ action }}" enctype="multipart/form-data">
+                {% csrf_token %}
+		{{ formset.management_form }}
+	    <div class="page-header"> <!-- div f2 -->
+              <div class="form-group"> <!-- div f1 -->
+		<div align="right"> <!-- div i0 -->
+		    <a href="{% url 'datacubes.views.carrier_detail_vw' pk=0 %}" class="btn btn-primary" type="submit">Afegir</a>
+		    <a href="{% url 'datacubes.views.index' %}" class="btn btn-warning" type="submit">Cancelar</a>
+		 </div> <!-- div f0 -->
+               </form>
+	      </div> <!-- div f1 -->
+	     </div> <!-- div f2 -->
+	   </div> <!-- div f3 -->
+      </div> <!-- div f5 -->
+
+	<div class="row"> <!-- div i4 -->
+	  <div class="col-md-3 hidde-sm"></div> <!-- div if3 -->	   
 <!-- detail data -->
-	  <div class="col-md-6">
-	    <div align="center">
+	  <div class="col-md-6"> <!-- div i2 -->
+	    <div align="center"> <!-- div i1 -->
              {% block main-content %}
-	        <div class="datagrid table" style="overflow-x: auto">
+	        <div class="datagrid table" style="overflow-x: auto"> <!-- div i0 -->
 		      <table>
 			<td align="center"; width="10%" nowrap><b>Cod.Tansportista</b></td>
 			<td align="left"; width="90%"><b>Descripción</b></td>
@@ -21,12 +40,9 @@
 				</tr>
 			{% endfor %}
 		      </table>
-		     </div>
+		</div> <!-- div f0 -->
      		{% endblock main-content %}
-	    </div>
-	  </div>
-	    </div>
-	  </div>
-         </div>
-     </div>  
+	    </div> <!-- div f1 -->
+	  </div> <!-- div f2 -->
+         </div> <!-- div f4 -->
      {% endblock content %}
