--- a/virtstadisicts/datacubes/templates/datacubes/deliver2.html
+++ b/virtstadisicts/datacubes/templates/datacubes/deliver2.html
@@ -56,7 +56,7 @@
 		   </select>
 		</div>
 		<br>
-		<div class?"col-sm-2">
+		<div class="col-sm-2">
 		    <input type="checkbox" name="dtent" value="dtent">Assignacio Masiva Dt.Entrega</input>
 	        </div>
 	        <div class="col-sm-2">
